# OpenViking

./: example.py
crates/ov_cli/src/: client.rs  help_ui.rs  main.rs
crates/ov_cli/src/commands/: mod.rs  (+1 more)
crates/ragfs/: Cargo.toml
crates/ragfs-python/: Cargo.toml
crates/ragfs-python/src/: git.rs  lib.rs
crates/ragfs/src/: lib.rs
crates/ragfs/tests/: git_s3_integration.rs
docs/design/: git-d7-vikingfs-python-handoff.md  git-version-control-design.md
docs/en/api/: 11-snapshot.md
docs/superpowers/specs/: 2026-06-29-ovgitignore-design.md
docs/zh/api/: 11-snapshot.md
examples/snapshot/: ov.conf.git-local.example  ov.conf.git-s3-tos.example
openviking/: async_client.py  git_namespace.py  sync_client.py
openviking/client/: local.py
openviking/core/: context.py
openviking/parse/parsers/: markdown.py
openviking/pyagfs/: __init__.py
openviking/server/: app.py
openviking/server/routers/: __init__.py  snapshot.py
openviking/service/: core.py  fs_service.py  reindex_executor.py
openviking/storage/: collection_schemas.py  viking_fs.py
openviking/storage/queuefs/: embedding_msg_converter.py
openviking/utils/: agfs_utils.py
openviking_cli/client/: base.py  http.py  sync_http.py
tests/agfs/: test_git_binding.py  test_git_binding_s3.py  test_viking_fs_git.py
tests/cli/: test_cli_snapshot.py
tests/client/: test_git_versioning.py  test_git_versioning_http.py  test_http_client_snapshot.py
tests/server/: test_api_snapshot.py
tests/unit/: test_create_agfs_client_git.py  test_git_config.py  test_git_namespace.py  test_local_client_git.py
(+15 files in other folders)
